--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -20,28 +20,28 @@
 <div id="content">
 <div id="main_info">
     <div class="info_group">
-        <span class="info_content">screenings every Wednesday evening at EKA  A101</span> <br>
+        <span class="info_content" style="z-index: 99;">screenings every Wednesday evening at EKA  A101</span> <br>
     </div>
     <div class="info_group">
         <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">12th of October, 20:00</span> <br>
+      <span class="info_content">19th of October, 20:00</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Mind Game (2004)</i></span> <br>
+      <span class="info_content"><i>Antonia's line (1995)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 43m</span> <br>
+      <span class="info_content">1h 42m</span> <br>
     </div>
  </div >
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BNzFlMDI1ZjctMzgzYy00YmVkLTlmMTMtNDZmZmVmMzk3MzNhXkEyXkFqcGdeQXVyMTA1OTEwNjE@._V1_.jpg"></img>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BNDVmNjdhMzEtNDMzMy00NzI0LWI1ZmUtNjJiNGEzMDExZDY5XkEyXkFqcGdeQXVyMjM5NDQzNTk@._V1_FMjpg_UX1000_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
