update quotes to double

--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta property='og:title' content='every person'/>
-  <meta property="og:type" content='website'/>
+  <meta property="og:title" content="every person"/>
+  <meta property="og:type" content="website"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>every person</title> 
@@ -14,13 +14,13 @@
 </style>
 <body>
 
-	<div id='person_container'>
+	<div id="person_container">
 
-	  <div id='info'>
-		<div id='title_img'> 
+	  <div id="info">
+		<div id="title_img"> 
 		  <img src="title_text.gif">
 		</div>
-		<p id='description'>
+		<p id="description">
 		  every person living in my sketchbooks <br>
 		  or... <br>
 		  every person I have ever met <br>
