--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta property="og:title" content="every person"/>
-  <meta property="og:type" content="website"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-  <meta charset="UTF-8">
-  <title>every person</title> 
-  
-  <link rel="stylesheet" href="./style.css">
+	<meta property="og:title" content="every person"/>
+	<meta property="og:type" content="website"/>
+	<meta property='og:image' content='webcover.jpg'/>
+	<meta property='og:image:url' content='webcover.jpg'/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta charset="UTF-8">
+	<title>every person</title> 
+	
+	<link rel="stylesheet" href="./style.css">
 </head>
 <style>
 </style>
@@ -131,8 +133,8 @@
 		<div class="modal_content_part">
 		  <p>Currently you can arrange that by contacting the <a href="https://twitter.com/aulerius2">author</a> directly, however if all goes well, the plan is to setup UI for that, wallet sync, and visible queue of requests on this website. Wish me luck!
 		  </p>
-		  <img src="about/about-twitter.webp" class="misc_img" style="height: 2.5em; margin-left: 10%;"></img>
-		  <img src="about/about-conversation.webp" class="misc_img" style="height: 6em; margin-right: 10%;"></img>
+		  <img src="about/about-twitter.webp" class="misc_img" style="height: 3em; margin-left: 10%;"></img>
+		  <img src="about/about-conversation.webp" class="misc_img" style="height: 7em; margin-right: 10%;"></img>
 		</div>
 	  </div>
 	</div>
