--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+	<meta charset="UTF-8"/>
+	<title>every person</title> 
+	<meta name="description" content="every person living in my sketchbooks or... every person I have ever met ...or could never meet ...or maybe a humble celebration of diverse human authenticity"/>
+	<meta name="author" content="aulerius"/>
+	
 	<meta property="og:title" content="every person"/>
 	<meta property="og:type" content="website"/>
 	<meta property='og:image' content='webcover.jpg'/>
-	<meta property='og:image:url' content='webcover.jpg'/>
+	<meta property='og:image:url' content='https://aulerius.art/everyperson/webcover.jpg'/>
 	<meta property='og:image:width' content='1600' />
 	<meta property='og:image:height' content='627' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-	<meta charset="UTF-8"/>
-	<title>every person</title> 
+	<meta property='og:description' content='every person living in my sketchbooks or... every person I have ever met ...or could never meet ...or maybe a humble celebration of diverse human authenticity'/>
 	
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./style.css"/>
 </head>
 <style>
 </style>
