--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -26,22 +26,22 @@
         <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">19th of October, 20:00</span> <br>
+      <span class="info_content">26th of October, 20:00</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Antonia's line (1995)</i></span> <br>
+      <span class="info_content"><i>Monoke: Medicine Seller (2007)<br>(selected episodes)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 42m</span> <br>
+      <span class="info_content">~1h 20m</span> <br>
     </div>
  </div >
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BNDVmNjdhMzEtNDMzMy00NzI0LWI1ZmUtNjJiNGEzMDExZDY5XkEyXkFqcGdeQXVyMjM5NDQzNTk@._V1_FMjpg_UX1000_.jpg"></img>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BYjE0MmVmYjctOTgxNi00MjY3LWIwNGItYjkwN2RhODcwNWE3XkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
