--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -15,7 +15,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<meta property='og:description' content='every person living in my sketchbooks or... every person I have ever met ...or could never meet ...or maybe a humble celebration of diverse human authenticity'/>
 	
-	<link rel="stylesheet" href="./style.css"/>
+	<link rel="stylesheet" href="style.css"/>
+	
+	<link rel="prefetch" href="dusty-empy-spread.webp"/>
+	<link rel="prefetch" href="dusty-empy-spread-v.webp"/>
+	
+
 </head>
 <style>
 </style>
