--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -69,7 +69,7 @@
 	<img id="thank-you" class="body_misc" src="thank-you.gif"> </img>
 
 	<div id="person_info">
-	  <!-- gets moved to appropiate person container upon opening a person view -->
+	  <!-- gets moved and adjusted to appropiate person container upon opening a person view -->
 	  <div class="person_info_top">
 		<div class="external_links">
 
@@ -89,8 +89,8 @@
 	</div>
 
 	<div id="curious_info">
-	  <!-- gets moved to appropiate person container (additional) upon opening a person view -->
-	  <div id="curious_text">nobody has been curious about this person yet...</div>
+		<!-- gets moved and adjusted to appropiate person container (additional) upon opening a person view -->
+		<div id="curious_text">info unknown...</div> <!-- text replaced in script -->
 		<div class="link_button">
 		  <a href = "">
 		  <svg fill="black" width="100" height="100">
@@ -100,6 +100,12 @@
 		   </a>
 		</div>
 		<input type="image" id="i_am_curious" class="misc_button" src="i-am-curious.gif" />
+		<div id="queue_pos">
+			<div id="queue_post_text" > position
+			<br> in queue:
+			</div>
+			<div id="queue_pos_number"> 0 </div>
+		</div>
 	</div>
 
 
@@ -126,7 +132,7 @@
 		</div>
 		<div class="modal_content_part">
 		  <p><img src="about/about-request.webp"></img>To send a request of curiosity about a particular person, one must have that person token residing in their tezos adress and keep it so until completion of the request. Upon completion, the Requester also receives an edition of that persons "curious about" illustration. (gifted!)
-	<img src="about/about-twitter.webp"></img>Currently you can arrange that by contacting the <a href="https://twitter.com/aulerius2">author</a> directly, however if all goes well, the plan is to setup UI for that, wallet sync, and visible queue of requests on this website. Wish me luck!
+	<img src="about/about-twitter.webp"></img>Currently you can arrange that by contacting the <a href="https://twitter.com/aulerius2">author</a> directly, however if all goes well, the plan is to setup UI and wallet sync for that. Wish me luck!
 		  </p>
 		</div>
 	  </div>
@@ -146,7 +152,7 @@
 		  </div>
 		</div>
 		<div class="modal_content_part">
-		  <p>Currently you can arrange that by contacting the <a href="https://twitter.com/aulerius2">author</a> directly, however if all goes well, the plan is to setup UI for that, wallet sync, and visible queue of requests on this website. Wish me luck!
+		  <p>Currently you can arrange that by contacting the <a href="https://twitter.com/aulerius2">author</a> directly, however if all goes well, the plan is to setup UI and wallet sync for that. Wish me luck!
 		  </p>
 		  <img src="about/about-twitter.webp" class="misc_img" style="height: 3em; margin-left: 10%;"></img>
 		  <img src="about/about-conversation.webp" class="misc_img" style="height: 7em; margin-right: 10%;"></img>
