--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -26,22 +26,22 @@
         <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">2nd of November, 20:00</span> <br>
+      <span class="info_content">9th of November, 20:00</span> <br>
     </div>
     <div class="info_group">
-      <span class="info" style = "background: orange; filter: drop-shadow(0 0 2rem crimson);"> <i> Halloween special:</i></span> <br>
+      <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content" style = "color: Chartreuse;"><i>Troll 2 (1990)</i></span> <br>
+      <span class="info_content"><i>Redline (2009)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 34m</span> <br>
+      <span class="info_content">1h 42m</span> <br>
     </div>
  </div >
- <img id="poster" src="https://flxt.tmsimg.com/assets/p14047_p_v8_aa.jpg"></img>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BNDA1ODI3MTcyNl5BMl5BanBnXkFtZTcwNDkyODYwNw@@._V1_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
