hover effects and tweaks

--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -59,9 +59,13 @@
 		  </div>
 		  </div>
 		</div>
-		<input type="image" id="curiosity_queue" class="misc_button" src="queue.gif"></input>
+		<div class="hover_button">
+			<input type="image" id="curiosity_queue" class="misc_button" src="queue.gif"></input>
+		</div>
 		<br>
-		<input type="image" class="misc_button" id="about" src="q.gif" />
+		<div class="hover_button">
+			<input type="image" class="misc_button" id="about" src="q.gif" />
+		</div>
 	  </div>
 
 	</div>
@@ -83,7 +87,9 @@
 		  </div>
 
 		</div>
-		<input type="image" class="person_exit" src="X.gif" />
+		<div class="hover_button">
+			<input type="image" class="person_exit misc_button" src="X.gif" />
+		</div>
 	  </div>
 	  <p class="person_text"></p>
 	</div>
@@ -91,6 +97,9 @@
 	<div id="curious_info">
 		<!-- gets moved and adjusted to appropiate person container (additional) upon opening a person view -->
 		<div id="curious_text">info unknown...</div> <!-- text replaced in script -->
+		<div class="hover_button">
+			<input type="image" id="i_am_curious" class="misc_button" src="i-am-curious.gif" />
+		</div>
 		<div class="link_button">
 		  <a href = "">
 		  <svg fill="black" width="100" height="100">
@@ -99,7 +108,6 @@
 		  <img src="third_party/versum.png"></img>
 		   </a>
 		</div>
-		<input type="image" id="i_am_curious" class="misc_button" src="i-am-curious.gif" />
 		<div id="queue_pos">
 			<div id="queue_post_text" > position
 			<br> in queue:
