--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -26,23 +26,22 @@
         <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">16th of November, 20:00</span> <br>
+      <span class="info_content">23rd of November, 20:00</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Kumiko, the Treasure Hunter
-(2014)</i></span> <br>
+      <span class="info_content"><i>Icaro Espacio</i> <br>(curated animation selection from Mexico by Andrea)</span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 45m</span> <br>
+      <span class="info_content">52m</span> <br>
     </div>
  </div >
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMTAzNzI1MTkyNzBeQTJeQWpwZ15BbWU4MDQ0NDU0MzQx._V1_FMjpg_UX1000_.jpg"></img>
+ <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BMTAzNzI1MTkyNzBeQTJeQWpwZ15BbWU4MDQ0NDU0MzQx._V1_FMjpg_UX1000_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
