--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -41,7 +41,7 @@
       <span class="info_content">52m</span> <br>
     </div>
  </div >
- <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BMTAzNzI1MTkyNzBeQTJeQWpwZ15BbWU4MDQ0NDU0MzQx._V1_FMjpg_UX1000_.jpg"></img>
+ <img id="poster" src="poster.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
