--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -26,22 +26,22 @@
         <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">23rd of November, 20:00</span> <br>
+      <span class="info_content">7th of December, 20:00 <br> (skipping a week)</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Icaro Espacio</i> <br>(curated animation selection from Mexico by Andrea)</span> <br>
+      <span class="info_content"><i>TBD</i></span>  <br>
     </div>
-    <div class="info_group">
+    <div class="info_group" style="display: none;">
       <span class="info">runtime:</span> <br>
     </div>
-    <div class="info_group">
-      <span class="info_content">52m</span> <br>
+    <div class="info_group"  style="display: none;">
+      <span class="info_content">1h 26m</span> <br>
     </div>
  </div >
- <img id="poster" src="poster.jpg"></img>
+ <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BZDQzMWM2MDgtYTI1Ny00NzQwLTgyMWUtYTE5YTk1YjYwZjUxXkEyXkFqcGdeQXVyNzI0Njk1Mg@@._V1_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
