--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -23,25 +23,25 @@
         <span class="info_content" style="z-index: 99;">screenings every Wednesday evening at EKA  A101</span> <br>
     </div>
     <div class="info_group">
-        <span class="info">next screening:</span> <br>
+        <span class="info">currently on winter break!</span> <br>
     </div>
-    <div class="info_group">
+    <div style="display: none;" class="info_group">
       <span class="info_content">21st of December, 20:00</span> <br>
     </div>
     <div class="info_group">
-      <span class="info">selection:</span> <br>
+      <span class="info">check back later</span> <br>
     </div>
-    <div class="info_group">
+    <div style="display: none;" class="info_group">
       <span class="info_content"><i>Klaus (2019)</i></span>  <br>
     </div>
-    <div class="info_group">
+    <div style="display: none;" class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
-    <div class="info_group">
+    <div style="display: none;" class="info_group">
       <span class="info_content">1h 36m</span> <br>
     </div>
  </div >
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMWYwOThjM2ItZGYxNy00NTQwLWFlZWEtM2MzM2Q5MmY3NDU5XkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg"></img>
+ <img id="poster" style="display: none;"src="https://m.media-amazon.com/images/M/MV5BMWYwOThjM2ItZGYxNy00NTQwLWFlZWEtM2MzM2Q5MmY3NDU5XkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
