--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -29,7 +29,7 @@
       <span class="info_content">21st of December, 20:00</span> <br>
     </div>
     <div class="info_group">
-      <span class="info">check back later</span> <br>
+      <span class="info">screenings will return on February</span> <br>
     </div>
     <div style="display: none;" class="info_group">
       <span class="info_content"><i>Klaus (2019)</i></span>  <br>
