--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -23,25 +23,25 @@
         <span class="info_content" style="z-index: 99;">screenings every Monday evening at EKA  A101</span> <br>
     </div>
     <div class="info_group">
-        <span class="info">currently on winter break!</span> <br>
-    </div>
-    <div style="display: none;" class="info_group">
-      <span class="info_content">21st of December, 20:00</span> <br>
+        <span class="info">Next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info">screenings will return on February</span> <br>
+      <span class="info_content">6th of February, 20:00</span> <br>
     </div>
-    <div style="display: none;" class="info_group">
-      <span class="info_content"><i>Klaus (2019)</i></span>  <br>
+    <div class="info_group">
+      <span class="info">selection:</span> <br>
     </div>
-    <div style="display: none;" class="info_group">
+    <div class="info_group">
+      <span class="info_content"><i>Fitzcarraldo (1982)</i></span>  <br>
+    </div>
+    <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
-    <div style="display: none;" class="info_group">
-      <span class="info_content">1h 36m</span> <br>
+    <div class="info_group">
+      <span class="info_content">2h 38m</span> <br>
     </div>
  </div >
- <img id="poster" style="display: none;"src="https://m.media-amazon.com/images/M/MV5BMWYwOThjM2ItZGYxNy00NTQwLWFlZWEtM2MzM2Q5MmY3NDU5XkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg"></img>
+ <img id="poster" src="http://cdn.shopify.com/s/files/1/1057/4964/products/Fitzcarraldo-Vintage-Movie-Poster-Original-German-A1-23x33-8085.jpg?v=1660683671"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
