add curious about pizza-brain-link + tweaks

--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -26,7 +26,10 @@
 </style>
 <body>
 	<div id="loading_display">
-		<img src="title_text.gif">
+		<div class="viewport_centered_elem">
+			<img src="title_text.gif"><br>
+			<div id="loading_message"></div>
+		</div>
 	</div>
 	
 	<div id="person_container" class="loading">
