--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -26,22 +26,22 @@
         <span class="info">Next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">13th of February, 20:00</span> <br>
+      <span class="info_content">20th of February, 20:00</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>The Holy Mountain (1973)</i></span>  <br>
+      <span class="info_content"><i>Suspiria (1977)</i></span>  <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">2h</span> <br>
+      <span class="info_content">1h 38m</span> <br>
     </div>
  </div >
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BN2IzM2I5NTQtMTIyMy00YWM2LWI1OGMtNjI0MWIyNDZkZGFkXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg"></img>
+ <img id="poster" src="https://m.media-amazon.com/images/I/61Bf6f68DcL._AC_UF894,1000_QL80_FMwebp_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
