--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -26,22 +26,22 @@
         <span class="info">Next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">27th of February, 20:00</span> <br>
+      <span class="info_content">6th of March, 20:00</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Midsommar (2019)</i></span>  <br>
+      <span class="info_content"><i>Belladonna of Sadness (1973)</i></span>  <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">2h 28m</span> <br>
+      <span class="info_content">1h 26m</span> <br>
     </div>
  </div >
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMzQxNzQzOTQwM15BMl5BanBnXkFtZTgwMDQ2NTcwODM@._V1_.jpg"></img>
+ <img id="poster" src="https://helenmccarthy.files.wordpress.com/2014/11/belladonna.jpg?w=1400"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
