--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -60,6 +60,52 @@
  </div>
     
   <script>
+	const sheetId = '1-6PTeKGLvOIr-VyTPE5SS6LznQ1QHU3vEKz6-LAm2b0';
+	const base = "https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?";
+	const sheetName = 'Epoch 6';
+	const query = encodeURIComponent('Select *')
+	const gsheet_url = `${base}&sheet=${sheetName}&tq=${query}`
+	
+	const gsheet_data = []
+	document.addEventListener('DOMContentLoaded', init)
+	
+	function init() {
+    fetch(gsheet_url)
+        .then(res => res.text())
+        .then(rep => {
+            //Remove additional text and extract only JSON:
+            const jsonData = JSON.parse(rep.substring(47).slice(0, -2));
+            console.log(jsonData)
+			/*
+            const colz = [];
+            const tr = document.createElement('tr');
+            //Extract column labels
+			
+			
+            jsonData.table.cols.forEach((heading) => {
+                if (heading.label) {
+                    let column = heading.label;
+                    colz.push(column);
+                    const th = document.createElement('th');
+                    th.innerText = column;
+                    tr.appendChild(th);
+                }
+            })
+            output.appendChild(tr);
+            //extract row data:
+            jsonData.table.rows.forEach((rowData) => {
+                const row = {};
+                colz.forEach((ele, ind) => {
+                    row[ele] = (rowData.c[ind] != null) ? rowData.c[ind].v : '';
+                })
+                data.push(row);
+            })
+            processRows(data);
+			*/
+        })
+	}
+  
+  
   // Get the modal
   var modal = document.getElementById("myModal");
 
